--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -313,10 +313,11 @@ html.sticky-header-active .header-logo {
 
         h2 {
             color: $purple;
+            font-size: 3.5rem;
             margin-bottom: $margin/2;
 
             .mf__section--purple & {
-                color: $white;
+                color: $cream;
             }
         }
 
@@ -326,12 +327,26 @@ html.sticky-header-active .header-logo {
 
         h3 {
             color: $purple;
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin-bottom: $margin/2;
 
             .mf__section--purple & {
-                color: $white;
+                color: $cream;
             }
+        }
+
+        h3 + .mf__separator {
+            width: 15%;
+        }
+
+        p + h4 {
+            margin-top: $margin*2;
+        }
+
+        h4 {
+            color: $purple;
+            font-size: 2rem;
+            margin-bottom: $margin/2;
         }
 
         p {
@@ -342,25 +357,109 @@ html.sticky-header-active .header-logo {
             &:last-of-type {
                 margin-bottom: 0;
             }
-        }
 
-        /* p + h4 {
-            margin-top: $margin*2;
+            .mf__section--purple & {
+                color: $cream;
+            }
         }
-
-        h4 {
-            color: $purple;
-            margin-bottom: $margin/2;
-        } */
 
         .mf__separator {
             background-color: $maroon;
 
             .mf__section--purple & {
-                background-color: $white;
+                background-color: $cream;
             }
         }
     }
+
+    &#{$es}footer {
+        &#footer {
+            background: url( '../../assets/images/bg2s.jpg' ) no-repeat center center;
+            background-size: cover;
+            border: none;
+            display: flex;
+            align-items: center;
+            min-height: 350px;
+        }
+
+        &#{$es}col {
+            display: flex;
+            flex-basis: 25%;
+            padding: $padding;
+
+            @include for-tablet-landscape-down{
+                flex-basis: 50%;
+            }
+
+            @include for-phone-only{
+                flex-basis: 100%;
+                justify-content: center;
+                text-align: center;
+            }
+
+            &#{$es}inner {
+                &#{$es}li {
+                    margin-bottom: $margin;
+
+                    &:first-of-type {
+                        margin-bottom: $margin/2;
+                    }
+
+                    &:last-child {
+                        margin-bottom: 0;
+                        padding-right: 0;
+                    }
+
+                    .mf__app-icons {
+                        width: 100%;
+
+                        &-con {
+                            display: block;
+                            max-width: 160px;
+                        }
+                    }
+                }
+
+                &#{$es}heading {
+                    color: $white;
+                    font-size: 2.2rem;
+                }
+
+                &#{$es}p {
+                    color: $white;
+                }
+
+                &#{$es}link {
+                    color: $white !important;
+
+                    &:hover {
+                        color: $white !important;
+                        text-decoration: underline !important;
+                    }
+                }
+
+                &#{$ms}socials {
+                    li {
+                        &:not(:first-of-type) {
+                            display: inline-block;
+                            padding-right: $padding;
+                        }
+
+                        &:last-of-type {
+                            padding-right: 0;
+                        }
+                    }
+
+                    i {
+                        color: $white;
+                        font-size: 3rem;
+                    }
+                }
+            }
+        }
+    }
+
+
 
     // Home page
     // Slider
@@ -580,90 +679,229 @@ html.sticky-header-active .header-logo {
     }
     // end Home
 
-    &#{$es}footer {
-        &#footer {
-            background: url( '../../assets/images/bg2s.jpg' ) no-repeat center center;
-            background-size: cover;
-            border: none;
-            display: flex;
-            align-items: center;
-            min-height: 350px;
+
+
+    // Home page
+    // Slider
+    &#{$es}slider h3 {
+        color: $white;
+    }
+
+    &#{$es}homepage-video {
+        &:before {
+            opacity: .6 !important;
         }
+    }
+
+    &#{$es}features {
+        h1 {
+            color: $cream;
+            margin-bottom: $margin*2;
+            text-align: center;
+        }
+
+        h2 {
+            color: $cream;
+            margin-bottom: $margin;
+        }
+
+        p {
+            color: $cream;
+            margin-bottom: $margin*2;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
+        &#{$es}row {
+            align-items: flex-start;
+            justify-content: flex-start;
+            // margin-right: -$margin;
+            margin-bottom: $margin*4;
+            // margin-left: -$margin;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            &#{$es}column {
+                align-self: stretch;
+                background-color: rgba( $black, 0.1 );
+                border-radius: $border-radius;
+                flex-basis: calc( ( 100% / 4 ) - ( #{ $margin }*2 ) );
+                margin: $margin;
+
+                @include for-tablet-landscape-down{
+                    flex-basis: calc( ( 100% / 2 ) - ( #{ $margin }*2 ) );
+                }
+
+                @include for-phone-only{
+                    flex-basis: 100%;
+                    margin-right: 0;
+                    margin-left: 0;
+                }
+
+                &--first {
+                    background: none;
+                    flex-basis: 100%;
+                    margin-bottom: $margin;
+                    text-align: center;
+                }
+            }
+        }
+
+        &#{$es}feature {
+            @include display-flex(
+                $align-items: center,
+                $justify-content: center
+            );
+
+            // height: 100%;
+            padding: $padding $padding;
+            text-align: center;
+
+            /* @include for-phone-only {
+                padding-left: 0;
+            } */
+
+            /* &:last-of-type {
+                padding-right: 0;
+            } */
+
+            > * {
+                flex-basis: 100%;
+            }
+
+            &#{$es}icon-con {
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                margin-bottom: $margin;
+                max-width: 48px;
+                max-height: 48px;
+                width: 48px;
+                height: 48px;
+            }
+
+            &#{$es}icon {
+                display: block;
+                width: 100%;
+            }
+
+            /* &#{$es}info {
+                height: 100%;
+            } */
+
+            h4 {
+                color: $cream;
+                font-size: 2.3rem;
+                line-height: 1.3;
+            }
+
+            h4 + p {
+                margin-top: $margin;
+            }
+
+            p {
+                font-family: $font-family-roboto;
+                font-size: 1.6rem;
+                line-height: 1.5;
+            }
+        }
+
+        &#{$ms}benefits {
+            background-color: var(--maroon);
+        }
+
+        &#{$ms}services {
+            background-color: var(--purple);
+
+            div.mf__features__row {
+                background-color: rgba( $black, 0.1 );
+                border-radius: $border-radius;
+                margin-right: 0;
+                margin-left: 0;
+                padding-right: $padding;
+                padding-bottom: $padding;
+                padding-left: $padding;
+
+                &:first-of-type {
+                    margin-top: $margin;
+                }
+            }
+        }
+    }
+
+    &#{$es}video {
+        background-color: var(--cream);
+
+        &#{$es}video {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+
+            @include for-992-up {
+                max-width: 60%;
+            }
+        }
+    }
+
+    &#{$es}register__buttons {
+        background-color: var(--black);
+        color: var(--white);
 
         &#{$es}col {
+            background-color: rgba( $white, 0.1 );
+            border-radius: $border-radius;
             display: flex;
-            flex-basis: 25%;
-            padding: $padding;
+            flex-direction: column;
+            flex-basis: calc( ( 100% / 2 ) - ( #{ $margin }*2 ) );
+            margin: $margin;
+            padding: $padding*2;
 
-            @include for-tablet-landscape-down{
-                flex-basis: 50%;
-            }
-
-            @include for-phone-only{
+            @include for-tablet-landscape-down {
                 flex-basis: 100%;
-                justify-content: center;
-                text-align: center;
-            }
-
-            &#{$es}inner {
-                &#{$es}li {
-                    margin-bottom: $margin;
-
-                    &:first-of-type {
-                        margin-bottom: $margin/2;
-                    }
-
-                    &:last-child {
-                        margin-bottom: 0;
-                        padding-right: 0;
-                    }
-
-                    .mf__app-icons {
-                        width: 100%;
-
-                        &-con {
-                            display: block;
-                            max-width: 160px;
-                        }
-                    }
-                }
-
-                &#{$es}heading {
-                    color: $white;
-                    font-size: 2.2rem;
-                }
-
-                &#{$es}p {
-                    color: $white;
-                }
-
-                &#{$es}link {
-                    color: $white !important;
-
-                    &:hover {
-                        color: $white !important;
-                        text-decoration: underline !important;
-                    }
-                }
-
-                &#{$ms}socials {
-                    li {
-                        &:not(:first-of-type) {
-                            display: inline-block;
-                            padding-right: $padding;
-                        }
-
-                        &:last-of-type {
-                            padding-right: 0;
-                        }
-                    }
-
-                    i {
-                        color: $white;
-                        font-size: 3rem;
-                    }
-                }
+                height: auto;
             }
         }
+
+        h3 {
+            color: var(--white);
+            font-size: 3rem;
+            line-height: 1;
+            margin-bottom: $margin*2;
+        }
+
+        &#{$es}info {
+            display: flex;
+            flex-wrap: wrap;
+            height: 100%;
+            justify-content: center;
+        }
+
+        &#{$es}p {
+            color: var(--white);
+            margin-bottom: $margin*2;
+        }
+
+        &#{$es}button {
+            align-self: flex-end;
+            background-color: $white !important;
+            display: inline-block;
+            font-family: $font-family-headings;
+            font-size: 1.8rem;
+            font-weight: 700;
+            line-height: 1.5;
+            padding-top: $padding/1.5;
+            padding-bottom: $padding/1.5;
+        }
+    }
+    // end Home
+
+    // Registration Phase 1
+    &#{$es}registration-phase-1__notes > * {
+        color: $maroon !important;
+        font-weight: 600;
     }
 }
